# localbricks

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: api_reference.rst  conf.py  index.rst
scripts/: build.sh  docs.sh
src/localbricks/: files.py  platform.py  spark.py
tests/: test_files.py  test_platform.py  test_spark.py
