[project]
name = "localbricks"
dynamic = ["version"]
description = "Write code that works the same locally and in Databricks"
readme = "README.md"
authors = [
    { name = "Anders Poirel", email = "contact@anderspoirel.net" }
]
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.36",
]

[project.optional-dependencies]
connect = ["databricks-connect>=13"]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"
